--- a/media/users/attachments/homepage.html
+++ b/media/users/attachments/homepage.html
@@ -1199,7 +1199,7 @@
     $('.editor_ace').each(function( index ) {
   editor = ace.edit(this);
 
-  editor.session.setMode("ace/mode/text");
+  editor.session.setMode("ace/mode/javascript");
   editor.setReadOnly(true)
 });
   
